examples/valid/basic/whitespace.wacc
# Whitespace only important between keyword and variable tokens
# Output
# 1

#Program:#

begin
	int a=13;	
  if a==13 then a=1 else a=0fi;
  println a
end
